<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ruleta.ActividadPrincipal" >

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:onClick="jugPar"
            android:text="@string/cadbtPar" />

        <Button
            android:id="@+id/btImpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:onClick="jugImpar"
            android:text="@string/cadbtImpar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt1doc"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:onClick="jug1doc"
            android:text="@string/cadbt1doc" />

        <Button
            android:id="@+id/bt2doc"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="jug2doc"
            android:text="@string/cadbt2doc" />

        <Button
            android:id="@+id/bt3doc"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.56"
            android:onClick="jug3doc"
            android:text="@string/cadbt3doc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/sbApuesta"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
			/>

        <TextView
            android:id="@+id/tvEurApu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08" >

        <TextView
            android:id="@+id/tvNumAle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_horizontal|center"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvSaldo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.22"
            android:text="Su saldo es de: " />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btRecargar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recargaSaldo"
            android:text="@string/cadRecargar" />

    </LinearLayout>

</LinearLayout>